...
      {/* TO (Where to?) */}
      <TouchableOpacity
        style={[styles.inputRow, { borderColor, backgroundColor: surfaceBg }]}
        onPress={() =>
          router.push({ pathname: "/(main)/(customer)/autocomplete", params: { type: "to" } })
        }
       testID="customer.home.el-2">
        <Ionicons name="location" size={20} color={colors.danger} />
        <View style={{ flex: 1 }}>
          <Text style={[styles.inputLabel, { color: textSecondary }]}>{t('home.search_destination')}</Text>
          <Text
            style={[styles.inputValue, { color: destination ? textPrimary : textDisabled }]}
            numberOfLines={1}
...
