...

      {/* Buttons */}
      <View className="w-full pb-10 gap-3">
        <CustomButton
          title="Sign In"
          onPress={() => router.replace("/(auth)/phone-entry")}
         testID="welcome.replace-phone-entry"/>
        <CustomButton
          title={t("auth.register")}
          bgVariant="secondary"
          onPress={() => router.replace("/(auth)/phone-entry")}
         testID="welcome.replace-phone-entry-2"/>
      </View>
...
